# gws

./: .gitignore  cuda_to_ptx.py  estimate_num_parameters.py  findsym.sh  git-tips  helion-dist-test.sh  install_vllm.py  llvm_or_mlir_libs.make  model_factory.py  norm_bwd_formula  padding-bench.py  parse_chrome_json.py  prepare_ncu.sh  quack-gemm-sm100.py  quack-rmsnorm-fwd.py  run_bench.sh  setup-conda.sh  setup-pytorch.sh  train_llama3.py
dataproc/: aug_with_gist.py  parse_kernel_metadata_csv.py  uniq.py
extra_pypath/: create_perfetto_link.py
gpt-infer/: main.py  model.py
gptoss/: README.md
gpu/: Makefile  add.cu  compile_utils.py  curun.cpp  curun.py  pre.h  pyproject.toml  rmsnorm.cu  rmsnorm.py  runner.cpp  setup.py  sum.cu  sum.py  tutor.py  util.py
gpu/curun/: __init__.py  util.py
gpu/kernel/: matmul.py  memcpy.cu  (+15 more)
infer-from-scratch/: args.py  attn.py  download.py  ffn.py  generate.py  main.py  model.py  rope.py  run.sh  sample.py  tokenizer.py  trm_layer.py
math/: fib-seq-like
microbench/: _copy.py
mixtral-moe-infer/: main.py  model.py
model/: bert.py  bert_for_qa.py  bert_model.py  bert_model_2.py
note/: layout_tv.md
ptxrunner/: Makefile  __init__.py  extension.cpp  tutor.py
scripts/: bench-torch-alloc-latency.py  build_triton_workarounding_glibc_issue.sh  flake8-error-stat.sh  flex_attn_perf.py  matmul_power_sweep.py  mypy-error-stat.sh  plot_norm_bwd_perf.py  try_gradcheck_on_autograd_function.py  upload_trace_to_manifold.py  vllm_attn_backends_perf.py
tritoncc/: Makefile  dot.ptx  main.cpp  pybind.cpp  tblgen.make  test_add.cpp  test_add.py  test_dot.cpp  test_fe_add.py  test_load_add_cubin_and_run.cpp  test_load_sum_cubin_and_run.cpp  test_sum.cpp  test_sum.py  tritoncc.cpp
ttirrunner/: Makefile  __init__.py  tutor.py
tutor/: all_reduce_with_symm_mem.py  ast_unparser.py  call_gemini.sh  compile_llama3_block_with_fp8.py  copy_commits_from_one_machine_to_another.md  cudagraphs.py  ddp.py  detect_global_va_partitioning.cu  export_aoti.py  flex-attn.py  flex_func_deco.py  hf_gpt2.py  impact-of-compute-order-for-fp.py  inductor_user_defined_triton_kernel.py  parse_ttir.py  skip_connection_cause_extra_fusion_in_mix_order_reduction.py  test_flash_attn.py  tl_cat.py  triton-reduction-determinism-xrblk-nwarps.py  try-claude-agent-sdk.py  try-inductor-mm-template.py  try-local-llm.py  try-python-concurrency.py  try-tts.py  try-vllm-offline-api.py  try-vllm-on-llama3.py  try-whisper.py  try_conv2d.py  try_max_pool2d.py  try_sounddevice.py  try_torch_cpp_extension.py  try_torch_custom_allocator.py  utils.py  verify_matmul_bwd.py
tutor/mlir-toy/: CMakeLists.txt  Dialect.cpp  Makefile  build_toyc.make  toyc.cpp
tutor/mlir-toy/include/toy/: AST.h  CMakeLists.txt  Dialect.h  Dump.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Pass.h  Pattern.h  Pattern.td  ShapeInferenceInterface.td
tutor/mlir-toy/toy-prog/: ast.toy  nested_struct.toy  struct.toy  trivial_reshape.toy
(+275 files in other folders)
